# shitty

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: app.rs  fallback_app.rs  keymap.rs  lib.rs  mac_app.rs  macos_ui.rs  main.rs  pty.rs  ui.rs
src/terminal/: color.rs  grid.rs  keymap.rs  mod.rs  pty.rs
